--- a/src/turbomind/models/medusa_plugin/CMakeLists.txt
+++ b/src/turbomind/models/medusa_plugin/CMakeLists.txt
@@ -12,5 +12,5 @@ add_library(Medusa STATIC
 set_property(TARGET Medusa PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 add_executable(medusa_head_example tests/medusa_head_example.cc)
-target_link_libraries(medusa_head_example PUBLIC Llama Medusa Threads::Threads)
+target_link_libraries(medusa_head_example PUBLIC Llama Medusa -lpthread)
 install(TARGETS medusa_head_example DESTINATION ${CMAKE_SOURCE_DIR}/lmdeploy/bin)
