load medusa weight

--- a/src/turbomind/models/llama/CMakeLists.txt
+++ b/src/turbomind/models/llama/CMakeLists.txt
@@ -35,7 +35,8 @@ target_link_libraries(Llama PUBLIC CUDA::cudart
         memory_utils
         nccl_utils
         cuda_utils
-        logger)
+        logger
+        Medusa)
 
 
 add_executable(llama_gemm llama_gemm.cc)
