--- a/src/turbomind/models/medusa_plugin/CMakeLists.txt
+++ b/src/turbomind/models/medusa_plugin/CMakeLists.txt
@@ -8,5 +8,11 @@ add_library(Medusa STATIC
         medusa_weight.cc
         res_block.cc
         medusa_head.cc)
-
+add_library(MedusaUtils STATIC
+        medusa_utils.cc)
 set_property(TARGET Medusa PROPERTY POSITION_INDEPENDENT_CODE ON)
+set_property(TARGET MedusaUtils PROPERTY POSITION_INDEPENDENT_CODE ON)
+
+add_executable(medusa_head_example tests/medusa_head_example.cc)
+target_link_libraries(medusa_head_example PUBLIC Llama Medusa -lpthread)
+install(TARGETS medusa_head_example DESTINATION ${CMAKE_SOURCE_DIR}/lmdeploy/bin)
